--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start":"node server.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +21,9 @@
     "hbs": "^4.0.4",
     "mysql2": "^1.6.5",
     "sequelize": "^5.8.6"
+  },
+  "engines": {
+    "node": "11.6.0" ,
+    "npm":"6.5.0"
   }
 }
